# tuxedo

./: .gitignore  Cargo.toml  README.md  flake.nix  package.nix  print-release-asset-downloads.sh
.github/workflows/: ci.yml  release.yml
packaging/: TuxedoCapture.swift  TuxedoLauncher.swift
packaging/agent/: CapturePanel.swift  MenuBar.swift  Paths.swift  Summary.swift  TagAutocomplete.swift  TaskRowView.swift  Theme.swift  main.swift
scripts/: iterm2-tuxedo-profile.json  package-macos.sh  test-macos-agent.sh  update-from-upstream.sh
src/: action.rs  attach.rs  brand.rs  config.rs  config_watcher.rs  keybinds.rs  lib.rs  main.rs  note.rs
src/advisor/: dispatch.rs
src/app/: bulk.rs  draft.rs  mod.rs  mutations.rs  note_panel.rs  palette.rs  test_support.rs  types.rs
src/core/: filter.rs
src/ui/: detail.rs  dialog.rs  empty.rs  filters.rs  header.rs  help.rs  hyperlinks.rs  kanban.rs  mod.rs  note_panel.rs  settings.rs  status.rs  task_row.rs  welcome.rs
tests/: snapshots.rs
tests/snapshots/: snapshots__archive_view_styled.snap  snapshots__archive_view_text.snap  snapshots__attach_prompt_overlay_styled.snap  snapshots__attach_prompt_overlay_text.snap  snapshots__command_palette_filtered_styled.snap  snapshots__command_palette_filtered_text.snap  snapshots__command_palette_preserves_visual_selection_styled.snap  snapshots__command_palette_preserves_visual_selection_text.snap  snapshots__command_palette_unfiltered_styled.snap  snapshots__command_palette_unfiltered_text.snap  snapshots__detail_note_and_attachments_styled.snap  (+35 more)
(+5 files in other folders)
