[package]
name = "tuxedo"
version = "2026.7.1-prumo3"
edition = "2024"

# The fork ships the same program under both names; user-facing text follows
# the invoked name (see src/brand.rs) while config paths stay `tuxedo`.
[[bin]]
name = "tuxedo"
path = "src/main.rs"

[[bin]]
name = "prumo"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
chrono = "0.4.44"
crossterm = "0.29.0"
getrandom = "0.2"
notify = "8"
qrcode = { version = "0.14", default-features = false }
ratatui = "0.30.0"
tiny_http = "0.12"

[dev-dependencies]
insta = "1.47"

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"
opt-level = "z"
